[gd_scene load_steps=4 format=3 uid="uid://caong3awgnxiv"]

[ext_resource type="Script" uid="uid://bop6v6cv5ocff" path="res://Scripts/item_panel.gd" id="1_fnh3e"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fnh3e"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xh0cu"]
size = Vector2(20, 80)

[node name="ItemPanel" type="Node2D"]
script = ExtResource("1_fnh3e")

[node name="RigidBodyPanel" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_fnh3e")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1

[node name="CollisionShapePanel" type="CollisionShape2D" parent="RigidBodyPanel"]
position = Vector2(10, 40)
shape = SubResource("RectangleShape2D_xh0cu")

[node name="RectPanel" type="ColorRect" parent="RigidBodyPanel"]
offset_right = 20.0
offset_bottom = 80.0

[node name="LightTopRect" type="ColorRect" parent="RigidBodyPanel"]
offset_top = 10.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="LightBottomRect" type="ColorRect" parent="RigidBodyPanel"]
offset_top = 60.0
offset_right = 20.0
offset_bottom = 70.0
color = Color(0.5, 0.5, 0.5, 1)

[connection signal="body_entered" from="RigidBodyPanel" to="." method="_on_rigid_body_panel_body_entered"]
